// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly -- default stage (USER role) 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        aria-current="page"
        class="item active"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/login"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui basic segment ui container stackable grid"
  >
    <div
      class="left aligned eight wide column"
    >
      <h1
        class="ui header"
      >
        Your Studies
      </h1>
    </div>
    <div
      class="right aligned eight wide column"
    >
      <a
        class="ui mini basic primary button"
        href="/study/new-study/info"
        role="button"
      >
        <i
          aria-hidden="true"
          class="add icon"
        />
        Add Study
      </a>
      <div
        class="ui mini left icon input pr-5"
      >
        <input
          placeholder="Search by Study Name"
          type="text"
          value=""
        />
        <i
          aria-hidden="true"
          class="search icon"
        />
      </div>
      <div
        class="ui mini buttons"
      >
        <button
          class="ui icon primary button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="grid layout icon"
          />
        </button>
        <button
          class="ui icon button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="list icon"
          />
        </button>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="column"
      >
        <div
          class="ui stackable four cards"
        >
          <div
            class="ui red card"
            to="/study/SD_8WX8QQ06/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_8WX8QQ06/basic-info/info"
            >
              <div
                class="header"
              >
                benchmark extensible e-business
              </div>
              <div
                class="meta"
              >
                SD_8WX8QQ06
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_8WX8QQ06/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="red clipboard list icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_8WX8QQ06/documents"
              >
                <i
                  aria-hidden="true"
                  class="grey file icon"
                />
                1
                 Files
              </a>
              <a
                href="/study/SD_8WX8QQ06/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="red code branch icon"
                />
                0
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                data-testid="show-detail"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
          <div
            class="ui red card"
            to="/study/SD_I1L92W57/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_I1L92W57/basic-info/info"
            >
              <div
                class="header"
              >
                visualize dynamic users
              </div>
              <div
                class="meta"
              >
                SD_I1L92W57
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_I1L92W57/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="red clipboard list icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_I1L92W57/documents"
              >
                <i
                  aria-hidden="true"
                  class="red file icon"
                />
                0
                 Files
              </a>
              <a
                href="/study/SD_I1L92W57/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="red code branch icon"
                />
                0
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                data-testid="show-detail"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
          <div
            class="ui red card"
            to="/study/SD_SG5N41K8/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_SG5N41K8/basic-info/info"
            >
              <div
                class="header"
              >
                strategize cross-media markets
              </div>
              <div
                class="meta"
              >
                SD_SG5N41K8
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_SG5N41K8/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="red clipboard list icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_SG5N41K8/documents"
              >
                <i
                  aria-hidden="true"
                  class="red file icon"
                />
                0
                 Files
              </a>
              <a
                href="/study/SD_SG5N41K8/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="red code branch icon"
                />
                0
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                data-testid="show-detail"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
          <div
            class="ui red card"
            to="/study/SD_0YYP5ZEN/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_0YYP5ZEN/basic-info/info"
            >
              <div
                class="header"
              >
                drive distributed architectures
              </div>
              <div
                class="meta"
              >
                SD_0YYP5ZEN
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_0YYP5ZEN/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="red clipboard list icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_0YYP5ZEN/documents"
              >
                <i
                  aria-hidden="true"
                  class="red file icon"
                />
                0
                 Files
              </a>
              <a
                href="/study/SD_0YYP5ZEN/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="grey code branch icon"
                />
                2
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                data-testid="show-detail"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly -- default stage (USER role) 2`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        aria-current="page"
        class="item active"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="true"
          class="ui active visible dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition visible"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/login"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui basic segment ui container stackable grid"
  >
    <div
      class="left aligned eight wide column"
    >
      <h1
        class="ui header"
      >
        Your Studies
      </h1>
    </div>
    <div
      class="right aligned eight wide column"
    >
      <a
        class="ui mini basic primary button"
        href="/study/new-study/info"
        role="button"
      >
        <i
          aria-hidden="true"
          class="add icon"
        />
        Add Study
      </a>
      <div
        class="ui mini left icon input pr-5"
      >
        <input
          placeholder="Search by Study Name"
          type="text"
          value=""
        />
        <i
          aria-hidden="true"
          class="search icon"
        />
      </div>
      <div
        class="ui mini buttons"
      >
        <button
          class="ui icon primary button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="grid layout icon"
          />
        </button>
        <button
          class="ui icon button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="list icon"
          />
        </button>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="column"
      >
        <div
          class="ui stackable four cards"
        >
          <div
            class="ui red card"
            to="/study/SD_8WX8QQ06/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_8WX8QQ06/basic-info/info"
            >
              <div
                class="header"
              >
                benchmark extensible e-business
              </div>
              <div
                class="meta"
              >
                SD_8WX8QQ06
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_8WX8QQ06/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="red clipboard list icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_8WX8QQ06/documents"
              >
                <i
                  aria-hidden="true"
                  class="grey file icon"
                />
                1
                 Files
              </a>
              <a
                href="/study/SD_8WX8QQ06/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="red code branch icon"
                />
                0
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                data-testid="show-detail"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
          <div
            class="ui red card"
            to="/study/SD_I1L92W57/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_I1L92W57/basic-info/info"
            >
              <div
                class="header"
              >
                visualize dynamic users
              </div>
              <div
                class="meta"
              >
                SD_I1L92W57
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_I1L92W57/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="red clipboard list icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_I1L92W57/documents"
              >
                <i
                  aria-hidden="true"
                  class="red file icon"
                />
                0
                 Files
              </a>
              <a
                href="/study/SD_I1L92W57/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="red code branch icon"
                />
                0
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                data-testid="show-detail"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
          <div
            class="ui red card"
            to="/study/SD_SG5N41K8/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_SG5N41K8/basic-info/info"
            >
              <div
                class="header"
              >
                strategize cross-media markets
              </div>
              <div
                class="meta"
              >
                SD_SG5N41K8
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_SG5N41K8/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="red clipboard list icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_SG5N41K8/documents"
              >
                <i
                  aria-hidden="true"
                  class="red file icon"
                />
                0
                 Files
              </a>
              <a
                href="/study/SD_SG5N41K8/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="red code branch icon"
                />
                0
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                data-testid="show-detail"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
          <div
            class="ui red card"
            to="/study/SD_0YYP5ZEN/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_0YYP5ZEN/basic-info/info"
            >
              <div
                class="header"
              >
                drive distributed architectures
              </div>
              <div
                class="meta"
              >
                SD_0YYP5ZEN
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_0YYP5ZEN/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="red clipboard list icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_0YYP5ZEN/documents"
              >
                <i
                  aria-hidden="true"
                  class="red file icon"
                />
                0
                 Files
              </a>
              <a
                href="/study/SD_0YYP5ZEN/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="grey code branch icon"
                />
                2
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                data-testid="show-detail"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly -- default stage (USER role) 3`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        aria-current="page"
        class="item active"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="true"
          class="ui active visible dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition visible"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/login"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui basic segment ui container stackable grid"
  >
    <div
      class="left aligned eight wide column"
    >
      <h1
        class="ui header"
      >
        Your Studies
      </h1>
    </div>
    <div
      class="right aligned eight wide column"
    >
      <a
        class="ui mini basic primary button"
        href="/study/new-study/info"
        role="button"
      >
        <i
          aria-hidden="true"
          class="add icon"
        />
        Add Study
      </a>
      <div
        class="ui mini left icon input pr-5"
      >
        <input
          placeholder="Search by Study Name"
          type="text"
          value=""
        />
        <i
          aria-hidden="true"
          class="search icon"
        />
      </div>
      <div
        class="ui mini buttons"
      >
        <button
          class="ui icon primary button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="grid layout icon"
          />
        </button>
        <button
          class="ui icon button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="list icon"
          />
        </button>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="column"
      >
        <div
          class="ui stackable four cards"
        >
          <div
            class="ui red card"
            to="/study/SD_8WX8QQ06/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_8WX8QQ06/basic-info/info"
            >
              <div
                class="header"
              >
                benchmark extensible e-business
              </div>
              <div
                class="meta"
              >
                SD_8WX8QQ06
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_8WX8QQ06/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="red clipboard list icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_8WX8QQ06/documents"
              >
                <i
                  aria-hidden="true"
                  class="grey file icon"
                />
                1
                 Files
              </a>
              <a
                href="/study/SD_8WX8QQ06/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="red code branch icon"
                />
                0
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                data-testid="show-detail"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
          <div
            class="ui red card"
            to="/study/SD_I1L92W57/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_I1L92W57/basic-info/info"
            >
              <div
                class="header"
              >
                visualize dynamic users
              </div>
              <div
                class="meta"
              >
                SD_I1L92W57
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_I1L92W57/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="red clipboard list icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_I1L92W57/documents"
              >
                <i
                  aria-hidden="true"
                  class="red file icon"
                />
                0
                 Files
              </a>
              <a
                href="/study/SD_I1L92W57/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="red code branch icon"
                />
                0
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                data-testid="show-detail"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
          <div
            class="ui red card"
            to="/study/SD_SG5N41K8/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_SG5N41K8/basic-info/info"
            >
              <div
                class="header"
              >
                strategize cross-media markets
              </div>
              <div
                class="meta"
              >
                SD_SG5N41K8
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_SG5N41K8/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="red clipboard list icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_SG5N41K8/documents"
              >
                <i
                  aria-hidden="true"
                  class="red file icon"
                />
                0
                 Files
              </a>
              <a
                href="/study/SD_SG5N41K8/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="red code branch icon"
                />
                0
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                data-testid="show-detail"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
          <div
            class="ui red card"
            to="/study/SD_0YYP5ZEN/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_0YYP5ZEN/basic-info/info"
            >
              <div
                class="header"
              >
                drive distributed architectures
              </div>
              <div
                class="meta"
              >
                SD_0YYP5ZEN
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_0YYP5ZEN/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="red clipboard list icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_0YYP5ZEN/documents"
              >
                <i
                  aria-hidden="true"
                  class="red file icon"
                />
                0
                 Files
              </a>
              <a
                href="/study/SD_0YYP5ZEN/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="grey code branch icon"
                />
                2
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                data-testid="show-detail"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly -- default stage (USER role) 4`] = `
<div>
  <div
    class="ui stretched center aligned middle aligned grid View--Login"
  >
    <div
      class="eight wide computer fifteen wide mobile twelve wide tablet column"
    >
      <div
        class="ui segment"
      >
        <h1
          class="ui header"
        >
          <img
            class="ui image"
            src="test-file-stub"
          />
          <div
            class="content"
          >
            Kids First Data Tracker
          </div>
        </h1>
        <div
          class="ui large vertical buttons"
        >
          <button
            class="ui icon positive right labeled button"
          >
            Login with Auth0
            <i
              aria-hidden="true"
              class="chevron right icon"
            />
          </button>
          <button
            class="ui large icon right labeled button"
          >
            Login with Ego
            <i
              aria-hidden="true"
              class="chevron right icon"
            />
          </button>
        </div>
        <div
          class="ui message"
        >
          New to Kids First Data Tracker?
          <a
            href="/"
          >
            Join now 
            <i
              aria-hidden="true"
              class="chevron right icon"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly -- loading stage (USER role) 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
</div>
`;
